--- a/par2.html
+++ b/par2.html
@@ -56,7 +56,7 @@
         </div>
         <div class="cour2">
             <h2 style="text-align: center;">Time table of <br>BS-SW PART II</h2>
-<img src="./t342.jpg" height=80% width="80%"  style="padding: 5px; position: relative;left: 100px;">
+<img src="./t342.jpg" height=80% width="80%"  style="padding: 5px;">
         </div>
       </div> 
       <div class="las">
