--- a/tas62.html
+++ b/tas62.html
@@ -23,7 +23,7 @@
     <!-- endddd of head -->
    <nav>
     <div class="parent">
-        <a href="task6.html" target="_blank"><b>HOME</b><img src="./t31.png" height="20px" width="20px"></a>
+        <a href="index.html" target="_blank"><b>HOME</b><img src="./t31.png" height="20px" width="20px"></a>
         <div class="child">
             <a href="tas61.html" target="_blank"><b>ABOUT</b></a>
             <a href="tas62.html" target="_blank"><b>FACULTY</b></a>
