--- a/par1.html
+++ b/par1.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FET-UOS</title>
-  <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css">
 
 </head>
 <body>
@@ -47,7 +47,7 @@
         <div class="cour1">
             <h4>FET-SOFTWARE ENGINEERING TIMETABLE</h4>
             <ul>
-                <li><a href="par1.html" style="color: #03045e;"><h2>BS-SW Part I</h2></a></li> 
+            <li><a href="par1.html" style="color: #03045e;"><h2>BS-SW Part I</h2></a></li> 
               <li><a href="par2.html"style="color: #03045e;"><h2>BS-SW Part II</h2></a></li> 
              <li><a href="par3.html"style="color: #03045e;"><h2>BS-SW Part III</h2></a></li> 
               <li><a href="par4.html"style="color: #03045e;"><h2>BS-SW Part IV</h2></a></li> 
@@ -55,8 +55,8 @@
             </ul>
         </div>
         <div class="cour2">
-            <h2 style="text-align: center;">Time table of <br>BS-SW PART I</h2>
-<img src="./t341.jpg"height=80% width="80%"  style="padding: 5px;">
+            <h2 style="text-align: center;">Time table of <br>BS-SW PART II</h2>
+<img src="./t341.jpg" height=80% width="80%"  style="padding: 5px;position:relative; left:5px">
         </div>
       </div> 
       <div class="las">
