Adjust image positioning in par1.html

--- a/par1.html
+++ b/par1.html
@@ -56,7 +56,7 @@
         </div>
         <div class="cour2">
             <h2 style="text-align: center;">Time table of <br>BS-SW PART II</h2>
-<img src="./t341.jpg" height=80% width="80%"  style="padding: 5px;position:relative; left:5px">
+<img src="./t341.jpg" height=80% width="80%"  style="padding: 5px;position:relative; left:20%">
         </div>
       </div> 
       <div class="las">
