Fix styling issues in cour2 div

--- a/par1.html
+++ b/par1.html
@@ -54,7 +54,7 @@
               
             </ul>
         </div>
-        <div class="cour2">
+        <div class="cour2" style="display:flex; justigy-content:center;align-items:center;flex-direction:column">
             <h2 style="text-align: center;">Time table of <br>BS-SW PART II</h2>
 <img src="./t341.jpg" height=80% width="80%"  style="padding: 5px;position:relative; left:20%">
         </div>
