--- a/par4.html
+++ b/par4.html
@@ -54,7 +54,7 @@
               
             </ul>
         </div>
-        <div class="cour2">
+        <div class="cour2" style="display:flex; justigy-content:center;align-items:center;flex-direction:column">
             <h2 style="text-align: center;">Time table of <br>BS-SW PART IV</h2>
 <img src="./t344.jpg" height=80% width="80%"  style="padding: 5px;">
         </div>
